###############################################################################
# NAME:             meson.build
#
# AUTHOR:           Ethan D. Twardy <ethan.twardy@gmail.com>
#
# DESCRIPTION:      Build script for the application
#
# CREATED:          11/04/2021
#
# LAST EDITED:      11/04/2021
###

project('git-touch', 'c')
executable(
  'git-touch',
  'git-touch.c',
  c_args: ['-Wall', '-Wextra', '-Werror', '-O3'],
)

###############################################################################
